# minimal-tz

./: .gitmodules  CMakeLists.txt  Makefile  README.md  build_merge_flash.sh
non-secure/: CMakeLists.txt  main_ns.c  non-secure.ld  ns_entry.h
secure/: CMakeLists.txt  secure.ld
